--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
